# isaac

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  REVIEW_AND_NEXT_IMPLEMENTATION_PLAN.md  models.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
scripts/: update_models_dev_catalog.py
src/isaac/: __main__.py  acp_compat.py  acp_runtime.py  agent.py  agent_terminal.py  cli.py  client.py  client_terminal.py  fs.py  log_utils.py  main.py  models.py  paths.py  runner.py  session_modes.py  slash.py  terminal.py
src/isaac/acp/: __init__.py  core.py  defaults.py
src/isaac/agent/: __init__.py  acp_agent.py  agent.py  agent_terminal.py  ai_types.py  capabilities.py  constants.py  default_runners.py  fs.py  history_types.py  main.py  mcp_support.py  models.py  plan_shortcuts.py  planner.py  prompt_utils.py  runner.py  session_modes.py  session_store.py  slash.py  terminal_common.py  tool_execution.py  tool_io.py  usage.py
src/isaac/agent/acp/: __init__.py  auth_flow.py  auth_methods.py  extensions.py  filesystem.py  history.py  initialization.py  permissions.py  plan_updates.py  prompt_env.py  prompts.py  sessions.py  terminal.py  tools.py  updates.py
src/isaac/agent/brain/: MULTI_TURN.md  agent_factory.py  compaction.py  events.py  handoff.py  handoff_runner.py  handoff_strategy.py  history.py  history_processors.py  history_utils.py  instrumentation.py  memory.py  model_errors.py  plan_helpers.py  plan_parser.py  plan_progress.py  plan_schema.py  plan_updates.py  planner.py  planning_agent.py  planning_delegate.py  prompt.py  prompt_handler.py  prompt_result.py  prompt_runner.py  prompt_strategies.py  prompt_support.py  recent_files.py  session_ops.py  session_state.py  strategy_base.py  strategy_plan.py  strategy_runner.py  strategy_utils.py  subagent_prompt.py  subagent_strategy.py  tool_args.py  tool_events.py  tool_policies.py
src/isaac/agent/data/: models_dev_api.json  models_dev_catalog.json
src/isaac/agent/oauth/: __init__.py  callback_server.py  storage.py
src/isaac/agent/oauth/code_assist/: __init__.py  auth.py  client.py  endpoints.py  model.py  prompt.py  request.py  storage.py
src/isaac/agent/oauth/openai_codex/: __init__.py  auth.py  client.py  model.py  models.py  prompt.py  storage.py
src/isaac/agent/subagents/: CONTRIBUTOR.md  __init__.py  args.py  coding.py  delegate_tools.py  outputs.py  planner.py  review.py
src/isaac/agent/tools/: __init__.py  apply_patch.py  args.py  code_search.py  edit_file.py  executor.py  fetch_url.py  file_summary.py  list_directory.py  list_files.py  policy.py  read_file.py  registration.py  registry.py  run_command.py  safety.py  schema.py
src/isaac/client/: __main__.py  acp_client.py  auth.py  client.py  client_terminal.py  display.py  mcp_config.py  protocol.py  repl.py  session_state.py  slash.py  status_box.py  terminal_common.py  thinking.py
src/isaac/shared/: terminal_common.py
src/isaac/tools/: __init__.py  code_search.py  edit_file.py  list_directory.py  read_file.py  run_command.py
tests/: conftest.py  test_acp_agent.py  test_acp_history.py  test_acp_plan_updates.py  test_acp_prompt_env.py  test_acp_prompt_stream.py  test_agent.py  test_agent_ext.py  test_brain_history.py  test_cli_models.py  test_client_auth.py  test_client_slash.py  test_client_usage.py  test_code_assist_compat.py  test_coding_memory.py  test_content.py  test_history_context_selector.py  test_history_processors.py  test_initialization.py  test_main.py  test_models.py  test_models_context.py  test_plan_parser.py  test_planning.py  test_planning_delegate.py  test_platform_dirs.py  test_prompt_handler_compaction_tokens.py  test_prompt_handler_history_semantics.py  test_prompt_handler_recent_files.py  test_prompt_stack.py  test_prompt_utils.py  test_runner_history.py  test_runner_thinking.py  test_runner_v2_stream.py  test_session_ops_model_switch.py  test_subagent_strategy.py  test_terminal.py  test_test_isolation.py  test_tool_args.py  test_tools.py  (+2 more)
