[project]
name = "isaac"
version = "0.1.0"
description = "Simple ACP agent"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "agent-client-protocol==0.7.0",
    "pydantic-ai==1.31.0",
    "prompt-toolkit==3.0.52",
    "python-dotenv",
    "ollama",
    "pathspec",
    "rich",
]

[project.scripts]
isaac = "isaac.agent:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/isaac"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false
allow_untyped_globals = true
exclude = ["\\.venv", "\\.uv-cache"]
files = ["src", "tests"]
disable_error_code = [
    "attr-defined",
    "assignment",
    "call-arg",
    "arg-type",
    "misc",
    "return-value",
    "union-attr",
    "dict-item",
    "index",
]
