[project]
name = "isaac-acp"
version = "0.3.0"
description = "ACP-compliant coding agent and reference client."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Isaac Contributors" }]
requires-python = ">=3.10"
keywords = ["acp", "agent-client-protocol", "agent", "cli", "repl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "agent-client-protocol==0.8.1",
    "pydantic-ai==1.60.0",
    "aiocache==0.12.3",
    "prompt-toolkit==3.0.52",
    "python-dotenv==1.2.1",
    "platformdirs==4.9.2",
    "pathspec==1.0.4",
    "rich==14.3.2",
]

[project.urls]
Homepage = "https://github.com/gbtami/isaac"
Repository = "https://github.com/gbtami/isaac"
Issues = "https://github.com/gbtami/isaac/issues"
ACP-Spec = "https://agentclientprotocol.com/protocol/"

[project.scripts]
isaac = "isaac.agent:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "ruff==0.15.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "mypy==1.19.1",
]

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src/isaac"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false
allow_untyped_globals = true
exclude = ["\\.venv", "\\.uv-cache"]
files = ["src", "tests"]
disable_error_code = [
    "attr-defined",
    "assignment",
    "call-arg",
    "arg-type",
    "misc",
    "return-value",
    "union-attr",
    "dict-item",
    "index",
]
